[Devtools] Accessibility pane: correctly show label text source

Correctly show label text

BUG=679526

Review-Url: https://codereview.chromium.org/2630323004
Cr-Commit-Position: refs/heads/master@{#444991}