third_party/WebKit/Source/modules/accessibility/AXNodeObject.cpp
@@ -2270,10 +2270,12 @@ String AXNodeObject::nativeTextAlternative(
            ++labelIndex) {
         Element* label = labels->item(labelIndex);
         if (nameSources) {
-          if (label->getAttribute(forAttr) == htmlElement->getIdAttribute())
+          if (!label->getAttribute(forAttr).isEmpty() &&
+              label->getAttribute(forAttr) == htmlElement->getIdAttribute()) {
             nameSources->back().nativeSource = AXTextFromNativeHTMLLabelFor;
-          else
+          } else {
             nameSources->back().nativeSource = AXTextFromNativeHTMLLabelWrapped;
+          }
         }
         labelElements.push_back(label);
       }
